feat: auth intercept.
